# spec

./: .gitignore  LICENSE  spec.cabal
app/: Main.hs
src/: Spec.hs
test/: Test.hs
